dellay animations to ensure animaitons wouldnt overlap with window resizing and be jumpy

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ page-container p {
 #logo {
   position: absolute;
   transform: translateX(-50%);
-  transition: all 300ms;
+  transition: top 300ms, left 300ms, width 300ms, max-width 300ms 300ms;
 }
 .jumbo {
   top: 45vh;
